<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg_background"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/reg_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/akrobat_extrabold"
            android:text="@string/reg_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/personGroup"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:hint="Группа:"
            android:editable="false"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reg_text"
            android:layout_marginTop="120dp"
            android:backgroundTint="@color/white" />

        <EditText
            android:id="@+id/personCategory"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:textColor="@color/white"
            android:hint="Тип группы:"
            android:editable="false"
            android:textColorHint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personGroup"
            android:backgroundTint="@color/white" />

        <EditText
            android:id="@+id/personSurname"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/white"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/personCategory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/personName"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personSurname"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/personPatronomic"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:hint="@string/patronomic"
            android:inputType="textPersonName"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personName"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/personBirthday"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:hint="@string/birthDate"
            android:inputType="date"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="@+id/personPatronomic"
            app:layout_constraintTop_toBottomOf="@+id/personPatronomic"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="Deprecated" />

        <Button
            android:id="@+id/dateButton"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="24dp"
            android:backgroundTint="@color/black"
            android:onClick="setDate"
            android:text="SET"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/personBirthday"
            app:layout_constraintTop_toBottomOf="@+id/personPatronomic"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/personPhone"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personBirthday"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/personEmail"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personPhone"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/personPassword"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/personEmail"
            app:layout_constraintTop_toBottomOf="@+id/personEmail"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/reg_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/red"
            android:text="@string/confirm"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personPassword"
            android:layout_marginBottom="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>